--- a/app/views/3-0/provider-manual-page.html
+++ b/app/views/3-0/provider-manual-page.html
@@ -52,21 +52,42 @@
                                 <!-- Parts e.g. 19 -->
                                 {% for part in subsection.parts %}
 
-                                    {% if part.type == "header" %}
-                                    <h3 class="govuk-heading-s">{{part.content|safe}}</h3>
+                                    {% if section.id == "glossary" %}
+                                        <h3 class="govuk-heading-s">{{part.title|safe}}</h3>
+                                        <p class="govuk-body">{{part.content|safe}}</p>
                                     {% else %}
-                                    <p class="govuk-body">
-                                        <span class="govuk-!-font-weight-bold">P{{part.id|safe}}.</span> {{part.content|safe}}
-                                    </p>
+                                        {% if part.type == "header" %}
+                                        <h3 class="govuk-heading-s">{{part.content|safe}}</h3>
+                                        {% elif part.type == "block" %}
+                                        <h3 class="govuk-heading-s">{{part.title|safe}}</h3>
+                                        <p class="govuk-body">
+                                            {{part.content|safe}}
+                                        </p>
+                                        {% elif part.type == "table1" %}
+                                        <!-- TODO render table from page 61 here -->
+                                        {% else %}
+                                        <p class="govuk-body">
+                                            <span class="govuk-!-font-weight-bold">P{{part.id|safe}}.</span> {{part.content|safe}}
+                                        </p>
+                                        {% endif %}
                                     {% endif %}
                                     
                                     <!-- Sub Parts e.g. 19.1 -->
                                     {% for subpart in part.subparts %}
+                                    
+                                        {% if subpart.type == "list" %}
+                                        <div style="margin-left: 20px">{{subpart.content|safe}}</div>
+                                        {% else %}
                                         <p class="govuk-body" style="margin-left: 20px"><span class="govuk-!-font-weight-bold">P{{subpart.id|safe}}.</span> {{subpart.content|safe}}</p>
+                                        {% endif %}
 
                                         <!-- Sub Sub Parts e.g. 19.1.1 -->
                                         {% for subsubpart in subpart.subsubparts %}
+                                            {% if subsubpart.type == "list" %}
+                                            <div style="margin-left: 40px">{{subsubpart.content|safe}}</div>
+                                            {% else %}
                                             <p class="govuk-body" style="margin-left: 40px"><span class="govuk-!-font-weight-bold">P{{subsubpart.id|safe}}.</span> {{subsubpart.content|safe}}</p>
+                                            {% endif %}
                                         {% endfor %}
 
                                     {% endfor %}
