--- a/app/views/3-0/provider-manual-search-results.html
+++ b/app/views/3-0/provider-manual-search-results.html
@@ -53,7 +53,7 @@ GOV.UK Manual
                                 {% if section.id == result.id %}
                                 <li>
                                     <h3><a href="provider-manual-page?providerpage={{section.id}}">{{section.title}}</a></h3>
-                                    <p>{{section.title}}</p>
+                                    <!-- <p>{{section.title}}</p> -->
                                 </li>
                                 {% endif %}
                             {% endfor %}
