--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -25,6 +25,8 @@
 
 {% block head %}
   {% include "includes/head.html" %}
+  {% block pageStyles %}
+  {% endblock %}
 {% endblock %}
 
 {% block pageTitle %}
