CCW-370 route from google on v3

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -17,8 +17,8 @@
 
 <div class="govuk-grid-row indexLinks">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">User Centred Funding Rules</h1>
-    <h3 class="govuk-heading-m">Prototype versions</h3>
+    <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototypes</h1>
+    <!-- <h3 class="govuk-heading-m">Prototype versions</h3> -->
 
 
     
@@ -26,8 +26,9 @@
       <li>3-0</a>
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24 govuk-!-font-weight-bold">
           <li class="">
-            Provider Rules<br>
-            <a href="/3-0/provider-manual">Original PDF content</a>
+            Provider Rules Manuals<br>
+            <a href="/3-0/provider-manual">Original PDF content</a><br>
+            <a href="/3-0/google">Original PDF content (from google)</a>
             <!-- TODO add list of all pages here -->
           </li>
         </ul>
