--- a/app/views/3-0/manual-search-results.html
+++ b/app/views/3-0/manual-search-results.html
@@ -5,7 +5,7 @@
 GOV.UK Manual
 {% endblock %}
 
-{% set _thisManual = myData.manuals['providers-manual-original'].content %}
+{% set _thisManual = myData.manuals[myData.manual].content %}
 
 {% block content %}
 <div class="search">
@@ -52,7 +52,7 @@ GOV.UK Manual
                             {% for section in _thisManual.sections %}
                                 {% if section.id == result.id %}
                                 <li>
-                                    <h3><a href="provider-manual-page?providerpage={{section.id}}">{{section.title}}</a></h3>
+                                    <h3><a href="manual-page?manualpage={{section.id}}">{{section.title}}</a></h3>
                                     <!-- <p>{{section.title}}</p> -->
                                 </li>
                                 {% endif %}
