--- a/app/views/3-0/rules-list.html
+++ b/app/views/3-0/rules-list.html
@@ -174,36 +174,28 @@
 
       <div id="wrapper" class="direction-ltr">
     
-
-      
-<div class="gem-c-contextual-breadcrumbs">
-    <!-- Rendering taxonomy breadcrumbs because the page is tagged to live taxons -->
-    
-
-
-<div class="gem-c-breadcrumbs govuk-breadcrumbs " data-module="track-click">
-  <ol class="govuk-breadcrumbs__list">
-      <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="homeLinkClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Home</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/education" data-track-options='{"dimension28":"5","dimension29":"Education, training and skills"}' class="govuk-breadcrumbs__link" aria-current="false" href="#">Education, training and skills</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further and higher education, skills and vocational training</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further education funding</a>
-      </li>
-      <li class="govuk-breadcrumbs__list-item" aria-current="false">
-          <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Apprenticeships funding</a>
-      </li>
-  </ol>
-</div>
-
-
-</div>
-
+    <div class="gem-c-contextual-breadcrumbs">
+        <!-- Rendering taxonomy breadcrumbs because the page is tagged to live taxons -->
+        <div class="gem-c-breadcrumbs govuk-breadcrumbs " data-module="track-click">
+            <ol class="govuk-breadcrumbs__list">
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a data-track-category="homeLinkClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Home</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a data-track-category="breadcrumbClicked" data-track-action="2" data-track-label="/education" data-track-options='{"dimension28":"5","dimension29":"Education, training and skills"}' class="govuk-breadcrumbs__link" aria-current="false" href="#">Education, training and skills</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further and higher education, skills and vocational training</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Further education funding</a>
+                </li>
+                <li class="govuk-breadcrumbs__list-item" aria-current="false">
+                    <a data-track-category="breadcrumbClicked" class="govuk-breadcrumbs__link" aria-current="false" href="#">Apprenticeships funding</a>
+                </li>
+            </ol>
+        </div>
+    </div>
 
     <main role="main" id="content" class="publication" lang="en">
       
@@ -283,12 +275,12 @@
 <div class="gem-c-govspeak govuk-govspeak direction-ltr">
       <section class="attachment embedded" id="attachment_2875831">
   <div class="attachment-thumb">
-      <a aria-hidden="true" class="thumbnail" href="#"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+      <a aria-hidden="true" class="thumbnail" href="manual-home?manual=employers-manual-original"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
   </div>
   <div class="attachment-details">
-    <h2 class="title"><a href="#">Apprenticeship funding: rules and guidance for employers</a></h2>
+    <h2 class="title"><a href="manual-home?manual=employers-manual-original">Apprenticeship funding: rules and guidance for employers</a></h2>
     <p class="metadata">
-        <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">2.08MB</span>, <span class="page-length">60 pages</span>
+        <span class="type">Guidance</span>
     </p>
 
 
@@ -307,10 +299,10 @@
   </div>
 </section><section class="attachment embedded" id="attachment_2875833">
   <div class="attachment-thumb">
-      <a aria-hidden="true" class="thumbnail" href="provider-manual"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
+      <a aria-hidden="true" class="thumbnail" href="manual-home?manual=providers-manual-original"><img alt="" src="/public/images/thumbnail_1819_Employer_Rules_v1.0.png"></a>
   </div>
   <div class="attachment-details">
-    <h2 class="title"><a href="provider-manual">Apprenticeship funding: rules for training providers</a></h2>
+    <h2 class="title"><a href="manual-home?manual=providers-manual-original">Apprenticeship funding: rules for training providers</a></h2>
     <p class="metadata">
         <span class="type">Guidance</span>
     </p>
@@ -324,8 +316,8 @@
   <div class="attachment-details">
     <h2 class="title"><a aria-describedby="attachment-2875834-accessibility-help" href="#">Apprenticeship funding rules 2018 to 2019: summary of changes</a></h2>
     <p class="metadata">
-        <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">1.09MB</span>, <span class="page-length">17 pages</span>
-    </p>
+            <span class="type"><abbr title="Portable Document Format">PDF</abbr></span>, <span class="file-size">1.09MB</span>, <span class="page-length">17 pages</span>
+        </p>
 
 
       <div data-module="toggle" class="accessibility-warning" id="attachment-2875834-accessibility-help">
