--- a/app/views/index.html
+++ b/app/views/index.html
@@ -27,10 +27,16 @@
         <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24 govuk-!-font-weight-bold">
           <li class="">
             Provider Rules Manuals<br>
-            <a href="/3-0/provider-manual">Original PDF content</a><br>
-            <a href="/3-0/google">Original PDF content (from google)</a>
+            <a href="/3-0/manual-home?manual=providers-manual-original">Original PDF content</a><br>
+            <a href="/3-0/google?manual=providers-manual-original">Original PDF content (from google)</a>
             <!-- TODO add list of all pages here -->
           </li>
+          <li class="">
+              Employer Rules Manuals<br>
+              <a href="/3-0/manual-home?manual=employers-manual-original">Original PDF content</a><br>
+              <a href="/3-0/google?manual=employers-manual-original">Original PDF content (from google)</a>
+              <!-- TODO add list of all pages here -->
+            </li>
         </ul>
       </li>
       <li><a href="/prototypes/round-2/index">2-0 - Employer Funding Rules</a> (tested: date?)
