--- a/app/views/3-0/manual-page.html
+++ b/app/views/3-0/manual-page.html
@@ -24,7 +24,18 @@
         <li class="last-child">{{section.title|safe}}</li>
     </ol>
 
-    <!-- TODO add 'Employers and apprenticeships: things to check' section to 'employers-manual-original' -->
+    <!-- TODO 
+        - add 'Employers and apprenticeships: things to check' section to 'employers-manual-original'
+        - add links from sup to footnote
+        -- add links to rules that are references e.g. (see paragraphs <a class='govuk-link' href='manual-page?manualpage=what-apprenticeship#apprenticeship-duration-employment-hours'>P45 to P61</a>)  
+    -->
+
+    <!-- 
+        TODO ideas: 
+            - add blurb to each section
+            - add rules numbers after each section header e.g. Intro (rules 1-18)
+            - add links to rules that are references e.g. "see paragraphs P45 to P61" could change to "see Ineligible costs (45 to 61)"
+    -->
       
     <article aria-labelledby="manual-title" id="content">
         <div class="manual-body">
