--- a/app/views/3-0/rules-list.html
+++ b/app/views/3-0/rules-list.html
@@ -280,7 +280,7 @@
   <div class="attachment-details">
     <h2 class="title"><a href="manual-home?manual=employers-manual-original">Apprenticeship funding: rules and guidance for employers</a></h2>
     <p class="metadata">
-        <span class="type">Guidance</span>
+        <span class="type">HTML</span>
     </p>
 
 
@@ -304,7 +304,7 @@
   <div class="attachment-details">
     <h2 class="title"><a href="manual-home?manual=providers-manual-original">Apprenticeship funding: rules for training providers</a></h2>
     <p class="metadata">
-        <span class="type">Guidance</span>
+        <span class="type">HTML</span>
     </p>
 
 
