--- a/app/views/3-0/manual-search-results.html
+++ b/app/views/3-0/manual-search-results.html
@@ -52,7 +52,7 @@ GOV.UK Manual
                             {% for section in _thisManual.sections %}
                                 {% if section.id == result.id %}
                                 <li>
-                                    <h3><a href="manual-page?manualpage={{section.id}}">{{section.title}}</a></h3>
+                                    <h3><a href="manual-page?manual={{myData.manual}}&manualpage={{section.id}}">{{section.title}}</a></h3>
                                     <!-- <p>{{section.title}}</p> -->
                                 </li>
                                 {% endif %}
