--- a/app/views/3-0/manual-page.html
+++ b/app/views/3-0/manual-page.html
@@ -154,6 +154,10 @@
         </div>
     </article>
             
+    <!-- <div class="download-manual">
+        <p class="govuk-body"><a href="manual-pdf?manual={{myData.manual}}" target="_blank" class="govuk-link govuk-link--no-visited-state">Download this manual (PDF, 250KB)</a></p>
+        <p class="govuk-body">If you would like this manual in another format please email <a href="#">email address here</a>.</p>
+    </div> -->
             
     <div class="print-page">
         <a onclick="window.print();return false;" href="#">Print this page</a>
