--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,53 +1,40 @@
 {% extends "layout.html" %}
 
-{% block pageStyles %}
-<style>
-.indexLinks .govuk-link:visited, 
-.indexLinks a:visited {
-  color: #005ea5;
-}
-.indexLinks .govuk-link:hover, 
-.indexLinks a:hover {
-  color: #2b8cc4;
-}
-</style>
-{% endblock %}
-
 {% block content %}
 
-<div class="govuk-grid-row indexLinks">
+<div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
-    <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototypes</h1>
-    <!-- <h3 class="govuk-heading-m">Prototype versions</h3> -->
-
-
-    
-    <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24 govuk-!-font-weight-bold">
-      <li>3-0</a>
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24 govuk-!-font-weight-bold">
-          <li class="">
+    <h1 class="govuk-heading-l">User Centered Funding Rules (UCFR) - Prototypes</h1>    
+    <ul class="govuk-list govuk-!-font-size-19">
+      <li>3-0
+        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
+          <li>
             Provider Rules Manuals<br>
-            <a href="/3-0/manual-home?manual=providers-manual-original">Original PDF content</a><br>
-            <a href="/3-0/google?manual=providers-manual-original">Original PDF content (from google)</a>
-            <!-- TODO add list of all pages here -->
+            <a href="/3-0/manual-home?manual=providers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
+            <a href="/3-0/google?manual=providers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
           </li>
-          <li class="">
+          <li>
               Employer Rules Manuals<br>
-              <a href="/3-0/manual-home?manual=employers-manual-original">Original PDF content</a><br>
-              <a href="/3-0/google?manual=employers-manual-original">Original PDF content (from google)</a>
-              <!-- TODO add list of all pages here -->
+              <a href="/3-0/manual-home?manual=employers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content</a><br>
+              <a href="/3-0/google?manual=employers-manual-original" class="govuk-link govuk-link--no-visited-state">Original PDF content (from google)</a>
             </li>
         </ul>
       </li>
-      <li><a href="/prototypes/round-2/index">2-0 - Employer Funding Rules</a> (tested: date?)
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
-          <li>added search results page</li>
-        </ul>
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <li>2-0
+          <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
+              <li>
+                  <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">Employer Funding Rules</a> (tested: date?)
+              </li>
+          </ul>
       </li>
-      <li><a href="/prototypes/round-1/index">1-0 - Employer Funding Rules</a> (tested: 22-29/10/2018)
-        <ul class="govuk-list govuk-list--bullet govuk-!-font-size-24">
-          <li>original content tweaked</li>
-        </ul>
+      <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible">
+      <li>1-0
+          <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
+              <li>
+                  <a href="/prototypes/round-1/index" class="govuk-link govuk-link--no-visited-state">Employer Funding Rules</a> (tested: 22-29/10/2018)
+              </li>
+          </ul>
       </li>
     </ul>
   </div>
