--- a/app/views/3-0/manual-home.html
+++ b/app/views/3-0/manual-home.html
@@ -24,7 +24,7 @@
             <p class="summary">{{_thisManual.intro|safe}} {{_thisManual.interest|safe}}</p>
             
             <div class="call-to-action">
-                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">Download this manual in another format</a>.</p>
+                <p class="govuk-body"><a href="rules-list" class="govuk-link govuk-link--no-visited-state">View formats for all apprenticeship funding rules 2018 to 2019</a>.</p>
             </div>
 
             <!-- <div class="download-manual govuk-inset-text">
