--- a/app/views/index.html
+++ b/app/views/index.html
@@ -24,7 +24,7 @@
       <li>2-0
           <ul class="govuk-list govuk-list--bullet govuk-!-font-size-19 govuk-!-font-weight-bold">
               <li>
-                  <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">Employer Funding Rules</a> (tested: date?)
+                  <a href="/prototypes/round-2/index" class="govuk-link govuk-link--no-visited-state">Employer Funding Rules</a> (tested: 13-22/11/2018)
               </li>
           </ul>
       </li>
